<resources>
    <string name="app_name">ShoppingList</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="add_item">Add Item</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register_now">Register Now?</string>
</resources>